package com.deloitte.training.oodesignpatterns.creational.factorymethod;

public class Circle implements Shape {

    @Override
    public void draw() {
        System.out.println("Draw a circle.");
    }
    
}
