package com.deloitte.training.oodesignpatterns.creational.factorymethod;

public class Rectangle implements Shape {

    @Override
    public void draw() {
        System.out.println("Draw a rectangle.");
    }
    
}
