package com.deloitte.training.oodesignpatterns.creational.factorymethod;

public interface Shape {

    void draw();
    
}
