package com.deloitte.training.oodesignpatterns.creational.factorymethod;

public class Square implements Shape {

    @Override
    public void draw() {
        System.out.println("Draw a square.");
    }
    
}
